@@ -1,5 +1,13 @@
 2022-08-16 Hugo Melder <contact@hugomelder.com>
 
+	* Source/NSPredicate.m:
+	When parsing an NSArray in -expressionValueWithObject:context:,
+	check if the array entry is a NSExpression object.
+	* Tests/base/NSPredicate/basic.m:
+	Test filter operation.
+
+2022-08-16 Hugo Melder <contact@hugomelder.com>
+
 	* Source/win32/GSFileHandle.m:
 	Support overlapped I/O on standard streams in GSFileHandle.
 	* Source/GSFileHandle.h:
